apps/base/steward/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steward
  labels:
    apps: steward
spec:
  replicas: 3
  selector:
    matchLabels:
      apps: steward
  template:
    metadata:
      labels:
        apps: steward
    spec:
      containers:
      - name: steward
        # image is provided by kustomize
        command: ["steward"]
        args:
        - "--addr=0.0.0.0"
        - "--port=8080"
        - "--crt=/data/signkey/tls.crt"
        - "--key=/data/signkey/tls.key"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: signingkey
          mountPath: "/data/signkey"
          readOnly: true
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080
          periodSeconds: 1
          timeoutSeconds: 3
          successThreshold: 3
      volumes:
      - name: signingkey
        secret:
          secretName: signingkey
          optional: false
