apps/base/steward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steward
spec:
  selector:
    app.kubernetes.io/name: steward
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
