apps/base/steward/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steward
spec:
  ingressClassName: haproxy
  tls: []
  rules: []
